fixed a layout issue with the navigation

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -603,7 +603,7 @@ footer nav ul li ul {
     column-gap: 0;
   }
 
-  header nav ul div {
+  header nav ul li {
     width: 400px;
     padding-right: 40px;
     padding-left: 40px;
@@ -611,7 +611,7 @@ footer nav ul li ul {
     padding-bottom: 1.25em;
   }
 
-  header nav ul div:hover {
+  header nav ul li:hover {
     border-bottom: 5px solid #0065fc;
     padding-bottom: 1.25em;
     cursor: pointer;
